--- a/MODULO_1_UNIDAD_3_GIT/workshop_page.html
+++ b/MODULO_1_UNIDAD_3_GIT/workshop_page.html
@@ -12,14 +12,8 @@
             <circle cx="50" cy="50" r="40" stroke="green" stroke-widht="4" fill="blue" />
         </svg>
         <!-- aca arranca la explicacion de la pagina, primero titulo, despues por secciones para mostrar mi trabajo -->
-        <h1>Kou's Workshop</h1>
-        <h2>Showcase Characters</h2>
-        <ul>
-            <li><img src="images\Aurelion_1.1_40.png" alt= "Mi primera imagen de prueba" /></li>
-            <li><img src="images\character_image_2_40.png" alt= "Mi segunda imagen de prueba" /></li>
-            <li><img src="images\Oreon_2.1_1_40.png" alt= "Mi tercera imagen de prueba" /></li>
-            <li><img src="images\Queen_Marisith_2_1_40.png" alt= "Mi cuarto imagen de prueba" /></li>
-        </ul>
+        <h1>KHOURY JOSE IGNACIO</h1>
+        <img src="images\perfil_github_test_1_10.jpg" alt= "MI FOTO DE PERFIL DE PRUEBA" />
         <h2>¿Quien Soy?</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi consequatur recusandae officiis in dolor blanditiis rerum doloremque, at delectus exercitationem tempora reiciendis harum voluptates dolorum consectetur dignissimos fuga itaque maiores.</p>
         <h2>Informacion Personal</h2>
@@ -27,6 +21,7 @@
             <li>Edad: 25 años</li>
             <li>Domicilio: Calle Lacrosse Nº589, Localidad Gonnet, Buenos Aires, Argentina</li>
             <li>Email de Contacto: bkcoury@gmail.com</li>
+            <li>Telefono de Contacto: 221-555-9719</li>
         </ul>
         <h2>Estudios</h2>
         <ul>
@@ -40,31 +35,40 @@
         <h2>¿Cuales son mis objetivos?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quae eius, voluptatum, qui facilis, eveniet voluptatibus deserunt hic voluptate aliquam a quos vel repellendus laboriosam atque omnis in. Aliquam, vero!</p>
         <h2>Diseños y Creaciones Propias</h2>
-        <p>En mi tiempo libre Diseño modelos en 3d y creo proyectos en equipo para agregar contenido a un juego de estrategia, de nombre "Total War Warhammer 3", todas mis creaciones pueden verse en la seccion Workshop de la plataforma Steam:<a href="https://steamcommunity.com/profiles/76561198137449605/myworkshopfiles/?appid=1142710">Khoury's Steam Workshop</a></p>
+        <p>En mi tiempo libre diseño modelos en 3d y creo proyectos en equipo para agregar contenido a un juego de estrategia, de nombre "Total War Warhammer 3", todas mis creaciones pueden verse en la seccion Workshop de la plataforma Steam:<a href="https://steamcommunity.com/profiles/76561198137449605/myworkshopfiles/?appid=1142710">Khoury's Steam Workshop</a>. Debajo dejo capturas de pantalla de los personajes dentro del juego.</p>
+        <ul>
+            <li><img src="images\Aurelion_1.1_40.png" alt= "Mi primera imagen de prueba" /></li>
+            <li><img src="images\character_image_2_40.png" alt= "Mi segunda imagen de prueba" /></li>
+            <li><img src="images\Oreon_2.1_1_40.png" alt= "Mi tercera imagen de prueba" /></li>
+            <li><img src="images\Queen_Marisith_2_1_40.png" alt= "Mi cuarto imagen de prueba" /></li>
+        </ul>
         <h2>Intentos Fallidos</h2>
+        <p>El motor grafico de Warscape no es facil de manejar, y aunque las posibilidades a la hora de diseñar movimientos, efectos e interacciones es muy amplia, tambien da lugar a situaciones en las cuales no todo funciona como debe. Por ejemplo, cuando trabajamos con unidades compuestas de mas de una entidad, y debemos manejar los nodos que conectan a cada una, un pequeño error de calculo puede llevar a que en vez de avanzar, la unidad haga lo siguiente.</p>
         <img src="images\ezgif.com-gif-maker.gif" alt= "Mi primer gif de prueba" />
         <h3>Prueba de sonido</h3>
         <audio src="multimedia\kou_test__crossings.wav" controls></audio>
         <h3>Prueba de video</h3>
-        <video src="multimedia\kou_test_trees_city.mp4" poster="" controls></video>
-
-        <h2>Completa el Siguiente Formulario</h2>
+        <video width="320" height="240" controls>
+            <source src="multimedia\kou_test_video.mp4" type="video/mp4">      
+        </video>
+        <h2>¿Queres contactarte conmigo?</h2>
+        <h3>Por favor, completa el siguiente formulario</h3>
         <form action="">
             <p>
-                <label for="">nombre</label>
+                <label for="">Nombre</label>
                 <input type="text"> 
             </p>
             <p>
-                <input type="text" placeholder="Usuario">
+                <label for="">¿Que te llamo mas la atencion del contenido en la pagina?</label>
+                <input type="text"placeholder="Una imagen, experiencias, etc."> 
             </p>
             <p>
-                <input type="text" placeholder="¿Que te llamo mas la atencion del contenido en la pagina?">
+                <label for="">¿Si tuvieras que contratar a alguien para hacer diseño 3d, que tendrias en cuenta?</label>
+                <input type="text"placeholder="Calidad, Atencion al detalle, estilo artistico, etc."> 
             </p>
             <p>
-                <input type="text" placeholder="¿Si tuvieras que contratar a alguien para hacer diseño 3d, que tendrias en cuenta?">
-            </p>
-            <p>
-                <input type="text" placeholder="¿Cual de los personajes consideras que esta mejor diseñado?">
+                <label for="">¿Cual de los personajes consideras que esta mejor diseñado? ¿Por que?</label>
+                <input type="text"placeholder="Texturas, colores, expresiones, etc."> 
             </p>
             <p>
                 <input type="submit" value="Enviar">
