--- a/MODULO_1_UNIDAD_2_GIT/test_page_html_work-1.html
+++ b/MODULO_1_UNIDAD_2_GIT/test_page_html_work-1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Khoury's Workshop</title>
+        <title>Khoury's Workshops</title>
     </head>
     <body>
         <img src="D:\CURSO JAVA CARPETA GIT\MODULO 1 UNIDAD 3 GIT\character_image.png alt="Mi primera imagen de prueba">
