--- a/MODULO_1_UNIDAD_3_GIT/workshop_page.html
+++ b/MODULO_1_UNIDAD_3_GIT/workshop_page.html
@@ -15,7 +15,7 @@
         <h1>KHOURY JOSE IGNACIO</h1>
         <img src="images\perfil_github_test_1_10.jpg" alt= "MI FOTO DE PERFIL DE PRUEBA" />
         <h2>¿Quien Soy?</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi consequatur recusandae officiis in dolor blanditiis rerum doloremque, at delectus exercitationem tempora reiciendis harum voluptates dolorum consectetur dignissimos fuga itaque maiores.</p>
+        <p>Lorem, ipsum dolor sit amet conssectetur adipisicing elit. Animi consequatur recusandae officiis in dolor blanditiis rerum doloremque, at delectus exercitationem tempora reiciendis harum voluptates dolorum consectetur dignissimos fuga itaque maiores.</p>
         <h2>Informacion Personal</h2>
         <ul>
             <li>Edad: 25 años</li>
