--- a/MODULO_1_UNIDAD_4_GIT/workshop_page.html
+++ b/MODULO_1_UNIDAD_4_GIT/workshop_page.html
@@ -32,7 +32,7 @@
             </div>
             <h2>¿Quien Soy?</h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicsing elit.</p>
             <h2>Informacion Personal</h2>
             <ul>
                 <li><span class="destacados">Edad:</span> 25 años</li>
