--- a/MODULO_2_UNIDAD_1_GIT/prueba_2.html
+++ b/MODULO_2_UNIDAD_1_GIT/prueba_2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Khoury's Workshop</title>
-    <link rel="stylesheet" href="prueba_2_css.css">
+    <link rel="stylesheet" href="prueba_2.css">
     <style>
         body {
             width: 90%;
@@ -15,10 +15,12 @@
         }
 
         .container>div {
-            border-radius: 5px;
-            padding: 10px;
-            background-color: rgb(199, 196, 187);
-            border: 2px ridge rgb(104, 227, 79);
+            border-radius: 40px;
+            padding: 5px;
+            border: 10px ridge rgb(104, 227, 79);
+            box-shadow: -1px 8px 25px 19px rgba(3, 132, 173, 0.5);
+            -webkit-box-shadow: -1px 8px 25px 19px rgba(3, 132, 173, 0.5);
+            -moz-box-shadow: -1px 8px 25px 19px rgba(3, 132, 173, 0.5);
         }
     </style>
 </head>
