--- a/MODULO_2_UNIDAD_1_GIT/prueba_2.html
+++ b/MODULO_2_UNIDAD_1_GIT/prueba_2.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Khoury's Workshop</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Foldit:wght@500&family=Oswald:wght@300;700&family=Roboto:ital,wght@0,300;1,100;1,500;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="prueba_2.css">
     <style>
         body {
@@ -32,7 +38,8 @@
             <h1>KHOURY JOSE IGNACIO</h1>
             <div id="portada"><img src="images\perfil_github_test_1_10.jpg" alt="MI FOTO DE PERFIL DE PRUEBA" />
             </div>
-            <h2>¿Quien Soy?</h2>
+            <h2><i class="fa-solid fa-person-rays" style="color: #26bac5;"></i>¿Quien Soy?<i
+                    class="fa-solid fa-person-rays" style="color: #26bac5;"></i></h2>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h2>Informacion Personal</h2>
@@ -57,7 +64,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div>
-            <h2>Diseños y Creaciones Propias</h2>
+            <h2><i class="fa-solid fa-wand-magic-sparkles fa-rotate-270" style="color: #2a511f;"></i>Diseños y
+                Creaciones Propias <i class="fa-solid fa-wand-magic-sparkles fa-rotate-270" style="color: #2a511f;"></i>
+            </h2>
             <p>En mi tiempo libre diseño modelos en 3d y creo proyectos en equipo para agregar contenido a un juego de
                 estrategia, de nombre "Total War Warhammer 3".</p>
             <p> Todas mis creaciones pueden verse en la seccion Workshop de la plataforma Steam:<a
@@ -70,7 +79,8 @@
             <img src="images\Queen_Marisith_2_1_40.png" alt="Mi cuarto imagen de prueba" />
         </div>
         <div>
-            <h2>Intentos Fallidos</h2>
+            <h2><i class="fa-solid fa-plug-circle-xmark" style="color: #db0f0f;"></i>Intentos Fallidos<i
+                    class="fa-solid fa-plug-circle-xmark" style="color: #db0f0f;"></i></h2>
             <p>El motor grafico de Warscape no es facil de manejar, y aunque las posibilidades a la hora de diseñar
                 movimientos,
                 efectos e interacciones es muy amplia, tambien da lugar a situaciones en las cuales no todo funciona
